--- a/Board_test/src/main/webapp/WEB-INF/web.xml
+++ b/Board_test/src/main/webapp/WEB-INF/web.xml
@@ -39,5 +39,43 @@
     <param-name>PAGES_PER_BLOCK</param-name>
     <param-value>5</param-value>
   </context-param>
+  
+  
+    <!-- 서블릿 매핑 1(예제 12-2) -->
+  <servlet>
+    <servlet-name>HelloServlet</servlet-name>
+    <servlet-class>servlet.HelloServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>HelloServlet</servlet-name>
+    <url-pattern>/12Servlet/HelloServlet.do</url-pattern>
+  </servlet-mapping>
+  
+  <!-- 서블릿 매핑 3(예제 12-7) -->
+  <servlet>
+    <servlet-name>DirectServletPrint</servlet-name>
+    <servlet-class>servlet.DirectServletPrint</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DirectServletPrint</servlet-name>
+    <url-pattern>/12Servlet/DirectServletPrint.do</url-pattern>
+  </servlet-mapping>
+  
+  <!-- 필터 -->
+  <filter>
+    <filter-name>BasicFilter</filter-name>
+    <filter-class>filter.BasicFilter</filter-class>
+    <init-param>
+      <param-name>FILTER_INIT_PARAM</param-name>
+      <param-value>필터 초기화 매개변수</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>BasicFilter</filter-name>
+    <url-pattern>/15FilterListener/BasicFilter.jsp</url-pattern>
+  </filter-mapping>
+  
+  
+  
    
 </web-app>
