--- a/Board_test/.project
+++ b/Board_test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Board_test</name>
+	<name>jsp_ex</name>
 	<comment></comment>
 	<projects>
 	</projects>
